plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'amcn'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.5'

	implementation 'org.springframework.boot:spring-boot-starter-json'

	// 파이썬 의존성 추가
	implementation 'org.python:jython-standalone:2.7.2'

	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	// open ai
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'com.theokanning.openai-gpt3-java:client:0.10.0'
	implementation 'com.theokanning.openai-gpt3-java:service:0.10.0'

	implementation 'com.stripe:stripe-java:23.2.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'sh.platform:config:2.2.2'

	implementation 'commons-io:commons-io:2.11.0' // 파일 입출력

	//gif
	implementation 'com.madgag:animated-gif-lib:1.4'

	//env
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation 'io.github.cdimascio:dotenv-java:2.2.0'

	//소셜
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test'


}

tasks.named('test') {
	useJUnitPlatform()
}
